--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 * {
   box-sizing: border-box;
 }
@@ -6,25 +5,32 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
+  min-height: 150vh;
 }
 /* Hero + Navbar */
 nav {
   background-color: rgba(0, 0, 0, 0.4);
-
   display: flex;
   align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
 }
-.nav-logo{
+.nav-logo {
+  position: relative;
   color: white;
   font-size: 2.1rem;
   /* padding: 20px 80px; */
   margin: 20px auto 20px 12%;
   font-weight: bold;
 }
-.nav-logo span{
-  color:#3fc1d5;
+.nav-logo span {
+  color: #3fc1d5;
 }
-nav ul{
+nav ul {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: right;
@@ -37,21 +43,24 @@ li {
 }
 a {
   text-decoration: none;
+}
+.nav-links a {
   color: white;
 }
-a:hover {
-  
+.nav-links a:hover {
   color: #3fc1d5;
 }
-
-.hero-bg-img {
-  /* Placeholder image*/
+.hero{
   background-image: url("images/pexels-pixabay-62623.jpg");
 
   min-height: 100vh;
 
-  /* Center and scale the image nicely */
+
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
+/* .hero-bg-img {
+
+
+} */
