--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,13 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
-  min-height: 150vh;
+  min-height: 300vh;
+  background-color: white;
 }
 /* Hero + Navbar */
 nav {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.8);
+  transition: .4s;
   display: flex;
   align-items: center;
   position: fixed;
@@ -17,11 +19,16 @@ nav {
   left: 0;
   width: 100%;
   z-index: 999;
+  height: 8.25%;
+}
+nav.sticky{
+  transition: .5s;
+  height: 6.6%;
 }
 .nav-logo {
   position: relative;
   color: white;
-  font-size: 2.1rem;
+  font-size: 2.2rem;
   /* padding: 20px 80px; */
   margin: 20px auto 20px 12%;
   font-weight: bold;
@@ -37,6 +44,7 @@ nav ul {
   gap: 20px;
   margin: 0 12% 0 auto;
 }
+
 li {
   list-style: none;
   font-size: 1rem;
@@ -46,21 +54,24 @@ a {
 }
 .nav-links a {
   color: white;
+  transition: .3s;
+  display: inline-block;     
+  position: relative;    
+  z-index: 1;     
+  padding: 1em;     
+  margin: -1em; 
+ 
 }
 .nav-links a:hover {
   color: #3fc1d5;
+  transition: 0.3s;
 }
-.hero{
+.hero {
   background-image: url("images/pexels-pixabay-62623.jpg");
 
   min-height: 100vh;
-
 
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
-/* .hero-bg-img {
-
-
-} */
