--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 }
 /* Hero + Navbar */
 nav {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.8);
   transition: 0.5s;
   display: flex;
   align-items: center;
@@ -30,7 +30,7 @@ nav.sticky {
   position: relative;
   color: white;
   font-size: 36px;
-  margin: 20px auto 20px 12%;
+  margin: 20px auto 20px 15%;
   font-weight: bold;
 }
 
@@ -42,15 +42,13 @@ nav.sticky {
   display: flex;
   align-items: center;
   justify-content: right;
- 
 }
 .nav-links-container {
-  margin: 0 12% 0 auto;
-
+  margin: 0 15% 0 auto;
 }
 li {
   list-style: none;
-  font-size: 1.1rem;
+  font-size: 1rem;
 }
 a {
   text-decoration: none;
@@ -58,43 +56,126 @@ a {
 
 .nav-links a {
   color: white;
-  transition: 0.2s;
+  transition: 0.3s;
   display: inline-block;
   position: relative;
   z-index: 1;
-  padding: .7rem;
-  /* margin: -1rem; */
+  padding: 0.7rem;
 }
 .nav-links a:hover {
   color: #3fc1d5;
-  transition: 0.1s;
+  transition: 0.3s;
 }
 .checkbtn {
-  font-size: 30px;
+  font-size: 28px;
   color: rgb(255, 255, 255);
   position: absolute;
   right: 1rem;
   margin-right: 40px;
+  margin-bottom: 100px;
   cursor: pointer;
   display: none;
+  transition: 0.3s;
+  padding: 0;
 }
 #check {
   display: none;
 }
 .hero {
-  background-image: url("images/pexels-pixabay-62623.jpg");
-  filter: brightness(60%);
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url("images/IMG_20191218_135131862.jpg");
   min-height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.hero-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  text-align: center;
+  padding: 0 10%;
+  margin: 90px 0 10px 0;
+}
+.hero-text h2 {
+  font-size: 1.5rem;
+  margin: 0 0 15px;
+}
+.hero-text p {
+  font-size: 2.5rem;
+  line-height: 1.2;
+  font-weight: 100;
+  margin: 10px auto 30px auto;
+  padding: 0 12%;
+  margin-top: 10px;
 }
 
+.hero-btn {
+  appearance: none;
+  backface-visibility: hidden;
+  background-color: #3fc1d5;
+  border-radius: 70px;
+  border-style: none;
+  box-shadow: none;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 1rem;
+  font-weight: normal;
+  height: 45px;
+  overflow: hidden;
+  padding: 14px 30px;
+  text-align: center;
+  transform: translate3d(0, 0, 0);
+  transition: all 0.3s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: top;
+  white-space: nowrap;
+}
+
+.hero-btn:hover {
+  background-color: #ffffff;
+  color: #3fc1d5;
+  box-shadow: rgba(0, 0, 0, 0.05) 0 5px 30px, rgba(0, 0, 0, 0.05) 0 1px 4px;
+  opacity: 1;
+  transform: translateY(0);
+  transition-duration: 0.35s;
+}
+
+.hero-btn:hover:after {
+  opacity: 0.5;
+}
+
+.hero-btn:active {
+  box-shadow: rgba(0, 0, 0, 0.1) 0 3px 6px 0, rgba(0, 0, 0, 0.1) 0 0 10px 0,
+    rgba(0, 0, 0, 0.1) 0 1px 4px -1px;
+  transform: translateY(2px);
+  transition-duration: 0.35s;
+}
+
+.hero-btn:active:after {
+  opacity: 1;
+}
+
+@media (min-width: 768px) {
+  .button-65 {
+    padding: 14px 22px;
+    width: 176px;
+  }
+}
 
 @media (max-width: 858px) {
   /*----- responsive Navbar ------ */
   .nav-logo {
-    position: fixed;
     font-size: 28px;
     margin: 20px;
   }
@@ -104,11 +185,12 @@ a {
   }
   nav {
     height: 65px;
+    background-color: rgba(0, 0, 0, 0.8);
   }
   .nav-links-container {
     display: none;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.8);
     transition: 0.5s;
     position: fixed;
     top: 65px;
@@ -122,10 +204,10 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* gap: 40px; */
     padding: 0;
+    margin-top: 5px;
   }
-  .nav-links a{
+  .nav-links a {
     padding: 1rem;
     margin: 5px;
   }
@@ -135,17 +217,77 @@ a {
   }
   /*-----  ------ */
 }
-@media (max-width: 330px){
+
+@media (max-width: 978px) {
   .nav-logo {
-    position: fixed;
-    font-size: 18px;
+    font-size: 30px;
+  }
+}
+@media (max-width: 330px) {
+  .nav-logo {
+    font-size: 16px;
     margin: 20px;
   }
-}
-@media (max-width: 978px){
-  .nav-logo {
-    font-size: 28px;
+  .checkbtn {
+    font-size: 16px;
   }
 }
 
+/* --- About Us --- */
 
+#about-us {
+  background-color: #f9f9f9;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding-top: 20px;
+}
+
+#about-us h1 {
+  padding-bottom: 10px;
+  margin-bottom: 0;
+  font-size: 2.2rem;
+  color: rgb(68, 68, 68);
+}
+.header-border {
+  margin: 0;
+  border-bottom: 2px solid #3fc1d5;
+  width: 5rem;
+}
+.about-us-container {
+  width: 85%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 0px;
+  margin: 10px auto;
+}
+
+.about-us-info {
+  padding: 25px;
+  max-width: 85%;
+  line-height: 1.5;
+}
+.about-us-info h2{
+  color: rgb(68, 68, 68);
+}
+.about-us-info ul {
+  padding: 0;
+}
+.about-us-info ul li {
+  padding: 5px 0 5px 0;
+}
+.about-us-info ul li i {
+  color: #3fc1d5;
+  margin-right: 5px;
+  /* font-size: 13px; */
+}
+
+#about-us img {
+  max-width: 80%;
+  height: auto;
+  margin: 50px 0 50px 7.5vw;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
