--- a/styles.css
+++ b/styles.css
@@ -60,8 +60,12 @@ a {
   display: inline-block;
   position: relative;
   z-index: 1;
-  padding: 0.7rem;
+  padding: 1rem;
 }
+.nav-links button {
+margin: 1rem;
+}
+
 .nav-links a:hover {
   color: #3fc1d5;
   transition: 0.3s;
@@ -115,12 +119,63 @@ a {
   padding: 0 12%;
   margin-top: 10px;
 }
+/* .contact-us-btn{
+  appearance: none;
+  backface-visibility: hidden;
+  background-color: #3fc1d5;
+  border-radius: 5px;
+  border-style: none;
+  box-shadow: none;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 1rem;
+  font-weight: normal;
+  height: 38px;
+  overflow: hidden;
+  padding: 10px 15px;
+  text-align: center;
+  transform: translate3d(0, 0, 0);
+  transition: all 0.3s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: top;
+  white-space: nowrap;
+}
+.contact-us-btn:hover{
+ 
+    background-color: #ffffff;
+    color: #3fc1d5;
+    box-shadow: rgba(0, 0, 0, 0.05) 0 5px 30px, rgba(0, 0, 0, 0.05) 0 1px 4px;
+    opacity: 1;
+    transform: translateY(0);
+    transition-duration: 0.35s;
+  
+}
+
+.contact-us-btn:hover:after {
+  opacity: 0.5;
+}
+
+.contact-us-btn:active {
+  box-shadow: rgba(0, 0, 0, 0.1) 0 3px 6px 0, rgba(0, 0, 0, 0.1) 0 0 10px 0,
+    rgba(0, 0, 0, 0.1) 0 1px 4px -1px;
+  transform: translateY(2px);
+  transition-duration: 0.35s;
+}
+
+.contact-us-btn:active:after {
+  opacity: 1;
+} */
+/* ----------------------------- */
 
 .hero-btn {
   appearance: none;
   backface-visibility: hidden;
   background-color: #3fc1d5;
-  border-radius: 70px;
+  border-radius: 50px;
   border-style: none;
   box-shadow: none;
   box-sizing: border-box;
@@ -165,7 +220,7 @@ a {
 .hero-btn:active:after {
   opacity: 1;
 }
-
+/* ------------hero btn end */
 @media (min-width: 768px) {
   .button-65 {
     padding: 14px 22px;
@@ -209,8 +264,12 @@ a {
   }
   .nav-links a {
     padding: 1rem;
-    margin: 5px;
+    margin: 10px;
   }
+  .nav-links button {
+    margin: 10px;
+  }
+ 
 
   #check:checked ~ .nav-links-container {
     display: flex;
