--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 // custom variables
-$primary: #c29938;
-$light:#fbf5e5;
+// $primary: #cb9412;
+// $light:#fbf5e5;
 
 @import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
