--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,17 @@
 
 @use 'custom';
+
+// import components
+@use 'components/animations';
+@use 'components/buttons';
+@use 'components/mixins';
+@use 'components/typography';
+
+// import sections
+@use 'sections/navbar';
+@use 'sections/intro-section';
+@use 'sections/services';
+@use 'sections/portfolio';
+@use 'sections/testimonials';
+@use 'sections/contact-us';
+@use 'sections/footer';
