--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,9 +9,10 @@
 
 // import sections
 @use 'sections/navbar';
-@use 'sections/intro-section';
+@use 'sections/hero-section';
 @use 'sections/services';
 @use 'sections/portfolio';
 @use 'sections/testimonials';
 @use 'sections/contact-us';
 @use 'sections/footer';
+
