add about us section with image

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,7 +12,7 @@
 @use 'sections/hero-section';
 @use 'sections/services';
 @use 'sections/portfolio';
-@use 'sections/testimonials';
+@use 'sections/about-us';
 @use 'sections/contact-us';
 @use 'sections/footer';
 
