change file name

--- a/sass/sections/_hero-section.scss
+++ b/sass/sections/_hero-section.scss
@@ -1,8 +1,8 @@
-#hero{
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url('../../images/IMG_20191218_135131862.jpg');
-    min-height: 80vh;
-//   parallax 
+#hero {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../../images/king-air.jpg");
+  min-height: 80vh;
+  //   parallax
   background-attachment: fixed;
 
   background-position: center;
@@ -13,3 +13,4 @@
   justify-content: center;
   flex-direction: column;
 }
+
