change css link to relative path

--- a/sass/sections/_hero-section.scss
+++ b/sass/sections/_hero-section.scss
@@ -1,6 +1,8 @@
 #hero {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url('../../images/king-air.jpg');
+    url('https://hmarin7755.github.io/Turbine-Solutions/images/king-air.jpg');
+
+    // 'http://yourwebsite.com/images/your-image-name.jpg'
   min-height: 80vh;
   //   parallax
   background-attachment: fixed;
