--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -10,16 +10,16 @@ $gray-700: #7b8a8b;
 $gray-800: #343a40;
 $gray-900: #212529;
 $black: #000;
-$blue: #2C3E50;
+$blue: #2c3e50;
 $indigo: #6610f2;
 $purple: #6f42c1;
 $pink: #e83e8c;
-$red: #E74C3C;
+$red: #e74c3c;
 $orange: #fd7e14;
-$yellow: #F39C12;
-$green: #18BC9C;
+$yellow: #f39c12;
+$green: #18bc9c;
 $teal: #20c997;
-$cyan: #3498DB;
+$cyan: #3498db;
 $primary: $blue;
 $secondary: $gray-600;
 $success: $green;
@@ -31,26 +31,24 @@ $dark: $gray-700;
 $dropdown-link-color: $gray-700;
 $dropdown-link-hover-color: $white;
 $dropdown-link-hover-bg: $primary;
-$navbar-dark-color: rgba($white,.8);
+$navbar-dark-color: rgba($white, 0.8);
 $navbar-dark-hover-color: $white;
 
 // $navbar-dark-color: $white;
 // $navbar-dark-hover-color: $success;
 
-
 @import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
 
-
-$custom-theme-colors:(
-    "altlightblue": #1e9bb4,
-    "altdark": #2C3E50
+$custom-theme-colors: (
+  "altlightblue": #1e9bb4,
+  "altdark": #2c3e50,
 );
 
 $theme-colors: map-merge($custom-theme-colors, $theme-colors);
 
 //add navbar height
-$navbar-padding-y: $spacer * .7;
+$navbar-padding-y: $spacer * 0.7;
 
 //import bootstrap 5
-@import '../node_modules/bootstrap/scss/bootstrap.scss';
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
