fix navbar from obscuring content when using links

--- a/sass/sections/_services.scss
+++ b/sass/sections/_services.scss
@@ -1,7 +1,4 @@
-#services{
-    border-top: 50px solid transparent;
-    margin-top: -50px;
-    -webkit-background-clip: padding-box;
-    -moz-background-clip: padding;
-    background-clip: padding-box;
+
+html{
+    scroll-padding-top: 4rem;
 }
