change image locations on homepage

--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -31,8 +31,8 @@ $dark: $gray-700;
 $dropdown-link-color: $gray-700;
 $dropdown-link-hover-color: $white;
 $dropdown-link-hover-bg: $primary;
-$navbar-dark-color: rgba($white, 0.8);
-$navbar-dark-hover-color: $white;
+$navbar-dark-color: $white;
+$navbar-dark-hover-color: $info;
 
 // $navbar-dark-color: $white;
 // $navbar-dark-hover-color: $success;
