--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -57,5 +57,19 @@ html {
 
 $card-height: 100%;
 
+//make images in cards the same size
+.card-img-top {
+  width: 100%;
+  height: 30vw;
+  object-fit: cover;
+}
+@media (min-width: 768px) {
+  .card-img-top {
+    width: 100%;
+    height: 12vw;
+    object-fit: cover;
+  }
+}
+
 //import bootstrap 5
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
