--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -1,7 +1,7 @@
 // custom variables
 $white: #fff;
-$gray-100: #f8f9fa;
-$gray-200: #ecf0f1;
+$gray-100: #f6f9fa;
+$gray-200: #ecf0f1; 
 $gray-300: #dee2e6;
 $gray-400: #ced4da;
 $gray-500: #b4bcc2;
@@ -26,7 +26,7 @@ $success: $green;
 $info: $cyan;
 $warning: $yellow;
 $danger: $red;
-$light: $gray-200;
+$light: $gray-100;
 $dark: $gray-700;
 $dropdown-link-color: $gray-700;
 $dropdown-link-hover-color: $white;
@@ -70,6 +70,7 @@ $card-height: 100%;
     object-fit: cover;
   }
 }
+$link-decoration: none;
 
 //import bootstrap 5
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
