change border on cards in services section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,7 +11,7 @@
 @use 'sections/navbar';
 @use 'sections/hero-section';
 @use 'sections/services';
-@use 'sections/portfolio';
+@use 'sections/gallery';
 @use 'sections/about-us';
 @use 'sections/contact-us';
 @use 'sections/footer';
