update image url link for contact page header

--- a/sass/sections/_contact-us.scss
+++ b/sass/sections/_contact-us.scss
@@ -1,6 +1,6 @@
 #contact-page-header{
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url("../../images/plane-601589_1920.jpg");
+    url("https://hmarin7755.github.io./Turbine-Solutions/images/plane-601589_1920.jpg");
     background-position: center;
 
     background-repeat: no-repeat;
