--- a/sass/sections/_projects.scss
+++ b/sass/sections/_projects.scss
@@ -14,7 +14,7 @@ transition: 0.5s;
   top: 40%;
   left: 45%;
   font-size: 40px;
-  color: black;
+  color: rgba(255, 255, 255, 0.9);
   transition: .5s;
   opacity: 0;
   cursor: pointer;
@@ -33,7 +33,7 @@ transition: 0.5s;
   top: 0;
   height: 100%;
   width: 100%;
-  background-color: rgba(230, 232, 238, 0.644);
+  background-color: rgba(0, 0, 0, 0.7);
   opacity: 0;
   position: absolute;
 }
