changed icons in projects and changed font in hero

--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -59,5 +59,7 @@ $card-height: 100%;
 
 $link-decoration: none;
 
+$box-shadow: 0 .3rem .5rem rgba($black, .15);
+
 //import bootstrap 5
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
