--- a/sass/sections/_hero-section.scss
+++ b/sass/sections/_hero-section.scss
@@ -1,10 +1,10 @@
 #hero {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)),
     url("https://hmarin7755.github.io./Turbine-Solutions/images/cessna-g25ec50f9c_1920.jpg");
   min-height: 85vh;
   // min-height: 45rem;
   //   parallax
-  background-attachment: fixed;
+  // background-attachment: fixed;
 
   background-position: center;
 
