--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -26,7 +26,7 @@ $success: $green;
 $info: $cyan;
 $warning: $yellow;
 $danger: $red;
-$light: $gray-100;
+$light: $gray-200;
 $dark: $gray-700;
 $dropdown-link-color: $gray-700;
 $dropdown-link-hover-color: $white;
@@ -60,6 +60,27 @@ $card-height: 100%;
 $link-decoration: none;
 
 $box-shadow: 0 .3rem .5rem rgba($black, .15);
+
+$figure-caption-font-size:          1rem;
+$figure-caption-color:              black;
+
+// .carousel-inner {
+//   height: 0;
+//   padding-bottom: 70%; /* this sets carousel aspect ratio (4:1 here) */
+// }
+
+// .carousel-item {
+//   position: absolute !important; /* Bootstrap is insistent */
+//   top: 0;
+//   right: 0;
+//   bottom: 0;
+//   left: 0;
+// }
+
+// .carousel-item img {
+//   height: 100%; /* Bootstrap handles width already */
+//   object-fit: cover; /* or 'contain' if you want stretch instead of crop */
+// }
 
 //import bootstrap 5
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
